Fix spacing issue in Rotten Tomatoes tooltips

--- a/src/index.css
+++ b/src/index.css
@@ -101,7 +101,7 @@ main {
   background-color: #333;
 }
 
-p, h1, h2, h3, h4, h5, h6, .seperate, ul, svg {
+p, h1, h2, h3, h4, h5, h6, .seperate, ul {
   line-height: 1.2;
   margin-top: 1em;
   margin-bottom: 0;
